--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "framer-motion": "^8.4.3",
     "react-hook-form": "^7.42.0",
     "react-hot-toast": "^2.4.0",
-    "react-use-measure": "^2.1.1"
+    "react-use-measure": "^2.1.1",
+    "mini-svg-data-uri": "^1.4.4"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
