--- a/package.json
+++ b/package.json
@@ -9,27 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
+    "@headlessui/tailwindcss": "^0.1.2",
+    "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.5",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@vercel/analytics": "^0.1.8",
+    "daisyui": "^2.49.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "eventsource-parser": "^0.0.5",
+    "framer-motion": "^8.4.3",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4",
-     "@headlessui/react": "^1.7.7",
-    "@headlessui/tailwindcss": "^0.1.2",
-    "@heroicons/react": "^2.0.13",
-    "@tailwindcss/forms": "^0.5.3",
-    "@vercel/analytics": "^0.1.8",
-    "eventsource-parser": "^0.0.5",
-    "framer-motion": "^8.4.3",
     "react-hook-form": "^7.42.0",
     "react-hot-toast": "^2.4.0",
     "react-use-measure": "^2.1.1",
-    "mini-svg-data-uri": "^1.4.4"
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
