--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.0",
     "react-hot-toast": "^2.4.0",
+    "react-lottie-player": "^1.5.4",
     "react-use-measure": "^2.1.1",
     "typescript": "4.9.4"
   },
